Rapid Prd/src/objects/Bank_Statement__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Acct#</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_on_check_matches_Acc_Info__c</fullName>
        <description>Address on check matches BLK/BLC Account Information?</description>
        <label>Add on check matches Acc Info?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Balance__c</fullName>
        <label>Average Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Daily_Balance__c</fullName>
        <label>Average Daily Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_voided_chech_Acc_and_ABA_match__c</fullName>
        <description>Does voided check account # and ABA number match BLK/BLC?</description>
        <label>Does voided chech Acc# and ABA# match?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <label>Import Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEB__c</fullName>
        <label>MEB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Average_Balance__c</fullName>
        <label>Monthly Average Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Cashflow__c</fullName>
        <formula>Monthly_Gross_Deposit__c  - Monthly_Gross_Debits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cashflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Debits__c</fullName>
        <label>Gross Debits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Deposit__c</fullName>
        <label>Gross Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NSF__c</fullName>
        <label>NSF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Bank Statements</relationshipLabel>
        <relationshipName>Bank_Statements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Deposits__c</fullName>
        <label>Total Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wire_Bank_Routing_Number__c</fullName>
        <label>Routing #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bank Statement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BST-{00000000}</displayFormat>
        <label>Bank Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>